-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.1.0, Qt Creator 3.1.1
-
None
-
Mac OS X 10.6.8
i686-apple-darwin10-gcc-4.2.1
-
b90452e309dfeb308fd9b82b4fce8f32588caeb4
Qt creator crashes when the autocompletion is activated. See the comments in int main ().
| For Gerrit Dashboard: QTCREATORBUG-12345 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 86829,4 | C++: fix nested anonymous with __attribute__ | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |