src/libs/3rdparty/cplusplus/Parser.cpp
@@ -1988,12 +1988,6 @@ bool Parser::parseClassSpecifier(SpecifierListAST *&node)
     NameAST *name = 0;
     parseName(name);
 
-    if (! name && LA() == T_LBRACE && (LA(0) == T_CLASS || LA(0) == T_STRUCT || LA(0) == T_UNION || LA(0) == T_ENUM)) {
-        AnonymousNameAST *ast = new (_pool) AnonymousNameAST;
-        ast->class_token = classkey_token;
-        name = ast;
-    }
-
     bool parsed = false;
 
     const bool previousInFunctionBody = _inFunctionBody;
@@ -2010,6 +2004,12 @@ bool Parser::parseClassSpecifier(SpecifierListAST *&node)
     }
 
     if (LA() == T_COLON || LA() == T_LBRACE) {
+        if (!name) {
+            AnonymousNameAST *ast = new (_pool) AnonymousNameAST;
+            ast->class_token = classkey_token;
+            name = ast;
+        }
+
         BaseSpecifierListAST *base_clause_list = 0;
 
         if (LA() == T_COLON) {
